<resources>
    <string name="app_name">SerieAmaniA V2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="remember_id_pw">ID &amp; PW 기억</string>
    <string name="login">LOGIN</string>
    <string name="ID">ID</string>
    <string name="PW">PW</string>
    <string name="noimage">No Image</string>
    <string name="noname">No Name</string>
    <string name="favoriteTeam">Favorite Team :</string>

    // 싱글아이템뷰
    <string name="content_title">제목</string>
    <string name="content_name">글쓴이</string>
    <string name="content_reply">리플</string>
    <string name="content_date">날짜</string>

    // 메뉴
    <string name="menu_calcioB">Calcio Board </string>
    <string name="menu_freeB">Free Board </string>
    <string name="menu_multiB">Multimedia Board </string>
    <string name="menu_qnaB">Q&amp;A Board  </string>
    <string name="menu_cas">Broadcast Board </string>
    <string name="title_activity_write">SerieAmaniA V2 - 글쓰기</string>

</resources>
